--- a/src/Resources/app/storefront/package.json
+++ b/src/Resources/app/storefront/package.json
@@ -1,10 +1,18 @@
 {
-    "name": "storefront",
-    "version": "1.0.0",
-    "private": true,
-    "author": "Shape & Shift",
-    "license": "ISC",
-    "dependencies": {
-        "mapbox-gl": "^1.9.1"
-    }
+  "name": "storefront",
+  "version": "1.0.0",
+  "private": true,
+  "author": "Shape & Shift",
+  "license": "ISC",
+  "dependencies": {
+    "@mapbox/mapbox-gl-language": "^1.0.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "mapbox-gl": "^2.9.2"
+  },
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "description": ""
 }
